--- a/Watchlist.html
+++ b/Watchlist.html
@@ -528,43 +528,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://image.tmdb.org/t/p/original/ffMUgkDZICNiyaws1Jkv8qG8uFW.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Inside Man</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2006</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://image.tmdb.org/t/p/original/2wrFrUej8ri5EpjgIkjKTAnr686.jpg"
               class="movie-poster"
             />
@@ -576,42 +539,6 @@
                 >
               </div>
               <span class="movie-year-text">2006</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://image.tmdb.org/t/p/original/lFM3lk2zVzC1YFnKm0r6LbFPyRu.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Wedding Crashers</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2005</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -684,42 +611,6 @@
                 >
               </div>
               <span class="movie-year-text">2005</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://image.tmdb.org/t/p/original/wZRNEkDxVDNNVaCPN7jKziMHmk5.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">Up in the Air</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2009</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -886,8 +777,6 @@
           </div>
         </div>
 
-  
-
         <div class="movie-item">
           <div class="movie-content">
             <img
@@ -963,42 +852,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://image.tmdb.org/t/p/original/7XLSwxpfpPoJyTdJVot6a42TS2V.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Help</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2011</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://image.tmdb.org/t/p/original/v31MsWhF9WFh7Qooq6xSBbmJxoG.jpg"
               class="movie-poster"
             />
@@ -1010,44 +863,6 @@
                 >
               </div>
               <span class="movie-year-text">2022</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
-              src="https://image.tmdb.org/t/p/original/6K0wjP8kPCiPYy9PtXBGuypyt5I.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Autopsy of Jane Doe</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text"
-                  ><img src="./images/IMDb_logo.png" /> TBA</span
-                >
-              </div>
-              <span class="movie-year-text">2016</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -1181,17 +996,17 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://image.tmdb.org/t/p/original/nCzcepubwShvZ4vbCsygQNgF2Z1.jpg"
+              src="https://image.tmdb.org/t/p/original/56TzBcWe6n5X3FKdaQm1pCE9qmd.jpg"
               class="movie-poster"
             />
-            <h2 class="movie-title">Stranger Than Fiction</h2>
+            <h2 class="movie-title">The Shallows</h2>
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text"
                   ><img src="./images/IMDb_logo.png" /> TBA</span
                 >
               </div>
-              <span class="movie-year-text">2006</span>
+              <span class="movie-year-text">2016</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -1214,7 +1029,7 @@
           </div>
         </div>
 
-      <!--   <div class="movie-item">
+        <!--   <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://image.tmdb.org/t/p/original/58QT4cPJ2u2TqWZkterDq9q4yxQ.jpg"
