--- a/index.html
+++ b/index.html
@@ -3214,6 +3214,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/2wrFrUej8ri5EpjgIkjKTAnr686.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Perfume: The Story of a Murderer</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.8</span
+                >
+              </div>
+              <span class="movie-year-text">2006</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/uolYbaXaY1VV0G7vJuYHMBV9yJ.jpg"
               class="movie-poster"
             />
@@ -3478,6 +3514,42 @@
                 >
               </div>
               <span class="movie-year-text">2008</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/130H1gap9lFfiTF9iDrqNIkFvC9.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">A Man Called Otto</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> TBA</span
+                >
+              </div>
+              <span class="movie-year-text">2022</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -6402,6 +6474,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/rBkptJyAMqCfoMwUGQfCpubroec.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Spotlight</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.1</span
+                >
+              </div>
+              <span class="movie-year-text">2015</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/vgpXmVaVyUL7GGiDeiK1mKEKzcX.jpg"
               class="movie-poster"
             />
@@ -8141,6 +8249,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/pDeVKQICkcdwwjHxGj0MeS14YJ6.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">End of Watch</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 9.0</span
+                >
+              </div>
+              <span class="movie-year-text">2012</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/41wXYaDblnKTzw9RW94NjHOe6KI.jpg"
               class="movie-poster"
             />
@@ -8513,6 +8657,42 @@
                 >
               </div>
               <span class="movie-year-text">2013</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/56TzBcWe6n5X3FKdaQm1pCE9qmd.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Shallows</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.9</span
+                >
+              </div>
+              <span class="movie-year-text">2016</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -9383,6 +9563,42 @@
                 >
               </div>
               <span class="movie-year-text">2019</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/v31MsWhF9WFh7Qooq6xSBbmJxoG.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Menu</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.7</span
+                >
+              </div>
+              <span class="movie-year-text">2022</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
