--- a/index.html
+++ b/index.html
@@ -8682,6 +8682,42 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://image.tmdb.org/t/p/original/dcOvIqdsojUdAtWt1nPT9xS76Su.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">We Bought a Zoo</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.9</span
+                >
+              </div>
+              <span class="movie-year-text">2011</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://image.tmdb.org/t/p/original/56TzBcWe6n5X3FKdaQm1pCE9qmd.jpg"
               class="movie-poster"
             />
@@ -9092,6 +9128,78 @@
                 >
               </div>
               <span class="movie-year-text">1993</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/8eeK3OB5PeSRQD7BpZcGZKkehG.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">RED</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.8</span
+                >
+              </div>
+              <span class="movie-year-text">2010</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/lLHG95wZ2y5izASvAkgmlWi7KAJ.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">RED 2</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.8</span
+                >
+              </div>
+              <span class="movie-year-text">2013</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -9599,6 +9707,42 @@
                 >
               </div>
               <span class="movie-year-text">2022</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://image.tmdb.org/t/p/original/i1J2zBCyOQJKsQipqJ0qXERC1Ma.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Exam</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text"
+                  ><img src="./images/IMDb_logo.png" /> 8.7</span
+                >
+              </div>
+              <span class="movie-year-text">2009</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
